src/test/ui/error-codes/E0253.stderr
error[E0253]: `do_something` is not directly importable
  --> $DIR/E0253.rs:17:5
   |
17 | use foo::MyTrait::do_something;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot be imported directly

error: aborting due to previous error

